Вёрстка и адаптация шапки и главноо экрана

--- a/assets/html/partials/hero.html
+++ b/assets/html/partials/hero.html
@@ -1,5 +1,20 @@
 <section class="section">
-	<div class="container">
-
+	<div class="container container--line">
+		<div class="hero" style="background-image: url('@img/hero/bg-1.png');">
+			<div class="hero__content">
+				<div class="hero__wrap">
+					<h1 class="hero__title title">
+						Лидер в области микроэлектронного дизайна
+					</h1>
+					<p class="hero__text text">
+						АО НТЦ "Модуль" является одним из крупнейших российских дизайн-центров встраиваемой аппаратуры
+						и микроэлектроники
+					</p>
+				</div>
+				<a class="hero__link link link--transparent link-reset" href="#">
+					Подробнее
+				</a>
+			</div>
+		</div>
 	</div>
 </section>
