--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -1,7 +1,8 @@
 <header class="header header--sticky">
-	<div class="container header__container">
-		<a class="header__logo logo" href="#/">
+	<div class="container container--line header__container">
+		<a class="header__logo logo link-reset" href="#/">
 			<img class="logo__img" src="@img/general/logo.svg" alt="Логотип">
+			<span class="logo__text">Научно-технический центр</span>
 		</a>
 		<div class="header__menu menu">
 			<button class="menu__burger burger btn-reset">
@@ -17,6 +18,9 @@
 					</li>
 					<li class="menu__item">
 						<a class="menu__link link-reset" data-goto="">Продукты</a>
+					</li>
+					<li class="menu__item">
+						<a class="menu__link link-reset" data-goto="">Поддержка</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link link-reset" data-goto="">Пресс-центр</a>
