--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -1,11 +1,47 @@
+@use 'mixins/adaptive-font' as *;
 @use './chunk/burger-menu';
 
 .logo {
 	display: flex;
 	align-items: center;
+	gap: 25px;
 
 	&__img {
 		max-width: 200px;
+
+		@media (max-width: 576px) {
+			max-width: 112px;
+		}
+	}
+
+	&__text {
+		position: relative;
+		padding-left: 14px;
+		width: 100%;
+		max-width: 175px;
+		font-size: 14px;
+		line-height: 110%;
+		text-transform: lowercase;
+		color: var(--accent-color);
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 50%;
+			width: 1px;
+			height: 28px;
+			background-color: var(--accent-color);
+			transform: translateY(-50%);
+		}
+
+		@media (max-width: 576px) {
+			max-width: 100px;
+		}
+	}
+
+	@media (max-width: 576px) {
+		gap: 10px;
 	}
 }
 
@@ -24,7 +60,7 @@
 			padding: 100px 30px 30px;
 			width: 100%;
 			height: 100vh;
-			background-color: var(--accent-color);
+			background-color: var(--bg-color);
 			transition: left 0.3s;
 		}
 
@@ -36,7 +72,7 @@
 	&__list {
 		display: flex;
 		align-items: center;
-		gap: 15px;
+		gap: 52px;
 
 		&--mobile {
 			flex-direction: column;
@@ -44,10 +80,68 @@
 	}
 
 	&__link {
+		font-weight: 500;
+		font-size: 10px;
+		text-transform: uppercase;
 		transition: opacity var(--time);
 
 		&:hover {
 			opacity: 0.5;
 		}
+	}
+}
+
+.section {
+	padding-top: 50px;
+}
+
+.title {
+	margin: 0;
+	font-family: var(--font-second);
+	font-weight: 500;
+	line-height: 140%;
+	text-transform: uppercase;
+	@include adaptive-font(40, 16);
+
+	&--big {
+		font-size: 50px;
+	}
+}
+
+.text {
+	margin: 0;
+	font-weight: 400;
+	@include adaptive-font(16, 14);
+
+	&--sm {
+		font-size: 14px;
+	}
+
+	&--lg {
+		font-size: 20px;
+	}
+
+	&--bold {
+		font-weight: 500;
+	}
+
+	&--upper {
+		text-transform: uppercase;
+	}
+}
+
+.link {
+	border: 2px solid var(--accent-color);
+	border-radius: 50px;
+	padding: 21px 38px;
+	width: fit-content;
+	font-size: 16px;
+	text-align: center;
+	text-transform: uppercase;
+	color: var(--link-color);
+	background-color: var(--accent-color);
+
+	&--transparent {
+		background-color: transparent;
 	}
 }
