--- a/assets/scss/chunk/_burger-menu.scss
+++ b/assets/scss/chunk/_burger-menu.scss
@@ -1,8 +1,8 @@
 .burger {
 	--burger-time: 0.1s;
 	--burger-width: 40px;
-	--burger-line-height: 4px;
-	--burger-radius: 4px;
+	--burger-line-height: 6px;
+	--burger-radius: 0px;
 	position: absolute;
 	right: 0;
 	z-index: 10;
@@ -20,7 +20,7 @@
 		border-radius: var(--burger-radius);
 		width: var(--burger-width);
 		height: var(--burger-line-height);
-		background-color: var(--dark-color);
+		background-color: var(--accent-color);
 
 		&::before,
 		&::after {
@@ -31,7 +31,7 @@
 			border-radius: var(--burger-radius);
 			width: var(--burger-width);
 			height: var(--burger-line-height);
-			background-color: var(--dark-color);
+			background-color: var(--accent-color);
 			transition:
 				transform var(--burger-time) ease-in,
 				top var(--burger-time) linear var(--burger-time);
