Вёрстка и адаптация секции "Новости" и мелкие фиксы

--- a/assets/html/partials/partners.html
+++ b/assets/html/partials/partners.html
@@ -34,8 +34,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="partners__nav swiper-button-prev"></div>
-				<div class="partners__nav swiper-button-next"></div>
+				<div class="partners__nav partners__nav--prev swiper-button-prev"></div>
+				<div class="partners__nav partners__nav--next swiper-button-next"></div>
 				<div class="partners__pagination swiper-pagination"></div>
 			</div>
 
