--- a/assets/html/partials/projects.html
+++ b/assets/html/partials/projects.html
@@ -67,8 +67,8 @@
 				</div>
 				<div class="projects__pagination swiper-pagination"></div>
 
-				<div class="projects__nav swiper-button-prev"></div>
-				<div class="projects__nav swiper-button-next"></div>
+				<div class="projects__nav projects__nav--prev swiper-button-prev"></div>
+				<div class="projects__nav projects__nav--next swiper-button-next"></div>
 			</div>
 
 			<a class="projects__link link link-reset" href="#">Все проекты</a>
