--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -11,6 +11,7 @@ $mobile-width: 390;
 	--bg-color: #292929;
 	--light-bg-color: #3d3d3d;
 	--accent-color: #3472e5;
+	--gray-color: #869ca6;
 	--error-color: #f06464;
 
 	// * Шрифты
