--- a/assets/scss/chunk/_projects.scss
+++ b/assets/scss/chunk/_projects.scss
@@ -9,7 +9,12 @@
 		padding: 0 150px;
 		padding-bottom: 50px;
 
-		@media (max-width: 992px) {
+		@media (max-width: 1400px) {
+			padding: 0 55px;
+			padding-bottom: 50px;
+		}
+
+		@media (max-width: 769px) {
 			padding: 0;
 			padding-bottom: 50px;
 		}
@@ -23,7 +28,7 @@
 			height: 100%;
 			min-height: 105px;
 
-			@media (max-width: 768px) {
+			@media (max-width: 420px) {
 				justify-content: flex-start;
 				min-height: 70px;
 			}
@@ -33,6 +38,14 @@
 		.swiper-button-next {
 			position: absolute;
 			z-index: 1;
+		}
+	}
+
+	&__pagination {
+		display: none;
+
+		@media (max-width: 992px) {
+			display: block;
 		}
 	}
 
@@ -71,14 +84,19 @@
 	}
 
 	&__link {
-		@media (max-width: 768px) {
+		@media (max-width: 1200px) {
 			width: 100%;
 			max-width: 100%;
 			box-sizing: border-box;
 		}
 	}
 
-	@media (max-width: 768px) {
+	@media (max-width: 1200px) {
+		max-width: 300px;
+	}
+
+	@media (max-width: 420px) {
+		width: 100%;
 		max-width: 100%;
 	}
 }
