--- a/assets/html/partials/hero.html
+++ b/assets/html/partials/hero.html
@@ -1,6 +1,7 @@
 <section class="section section--pt-big">
 	<div class="container container--line">
-		<div class="hero" style="background-image: url('@img/hero/bg-1.png');">
+		<div class="hero">
+			<div class="hero-bg" style="background-image: url('@img/hero/bg-1.png');"></div>
 			<div class="hero__content">
 				<div class="hero__wrap">
 					<h1 class="hero__title title">
