--- a/assets/html/partials/questions.html
+++ b/assets/html/partials/questions.html
@@ -6,7 +6,7 @@
 			</h2>
 
 			<div class="questions-spollers spollers">
-				<details class="spoller" open="">
+				<details class="spoller">
 					<summary class="spoller__header">
 						<span class="spoller__title">
 							Какие продукты выпускает компания «Модуль»?
