--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header header--sticky">
-	<div class="container container--line header__container">
+	<div class="container header__container header__container--line">
 		<a class="header__logo logo link-reset" href="#/">
 			<img class="logo__img" src="@img/general/logo.svg" alt="Логотип">
 			<span class="logo__text">Научно-технический центр</span>
