--- a/assets/scss/chunk/_hero.scss
+++ b/assets/scss/chunk/_hero.scss
@@ -1,11 +1,9 @@
 .hero {
 	position: relative;
+	overflow: hidden;
 	border-radius: var(--radius);
 	padding: 80px;
 	padding-bottom: 90px;
-	background-position: bottom 0 right 0;
-	background-size: 513px 323px;
-	background-repeat: no-repeat;
 	background-color: var(--light-bg-color);
 
 	&::after {
@@ -19,8 +17,26 @@
 		background-position: top 0 right 0;
 		background-repeat: no-repeat;
 
-		@media (max-width: 1200px) {
+		@media (max-width: 1400px) {
 			content: none;
+		}
+	}
+
+	&-bg {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%;
+		max-width: 513px;
+		max-height: 323px;
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+
+		@media (max-width: 992px) {
+			max-width: 315px;
+			max-height: 199px;
 		}
 	}
 
@@ -56,18 +72,15 @@
 	@media (max-width: 992px) {
 		padding: 40px;
 		padding-bottom: 100px;
-		background-size: 300px 199px;
 	}
 
 	@media (max-width: 768px) {
 		padding: 40px;
 		padding-bottom: 240px;
-		background-size: 300px 199px;
 	}
 
 	@media (max-width: 576px) {
 		padding: 20px;
 		padding-bottom: 240px;
-		background-size: 300px 199px;
 	}
 }
