--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -127,6 +127,13 @@
 		line-height: 120%;
 		text-transform: uppercase;
 	}
+
+	&--bold {
+		font-family: var(--font-second);
+		font-weight: 700;
+		font-size: 24px;
+		line-height: 100%;
+	}
 }
 
 .link {
@@ -154,6 +161,25 @@
 
 		&:hover {
 			background-color: var(--accent-color);
+		}
+	}
+}
+
+.socials {
+	display: flex;
+	gap: 20px;
+
+	&__item {
+		display: inline-block;
+		width: 30px;
+		height: 30px;
+		background-position: center;
+		background-size: contain;
+		background-repeat: no-repeat;
+		transition: opacity var(--time);
+
+		&:hover {
+			opacity: 0.8;
 		}
 	}
 }
