--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,4 +16,5 @@
 @use './chunk/questions';
 @use './chunk/spollers';
 @use './chunk/vacancies';
+@use './chunk/application';
 @use './chunk/footer';
