--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -60,6 +60,19 @@ body {
 	&--pb-30 {
 		padding-bottom: 30px;
 	}
+
+	&--tabs {
+		padding: 0;
+		padding-top: 5px;
+
+		@media (max-width: 1400px) {
+			padding-bottom: 5px;
+		}
+	}
+
+	&--pb-none {
+		padding-bottom: 0;
+	}
 }
 
 img {
